--- a/about.html
+++ b/about.html
@@ -179,17 +179,15 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="mission vission-mission">
-                            <h3>Mision.</h3>
-                            <h6>Saunas are used all over the world to improve health enjoy relax. During the clients stay in sauna, body is sweating and from harmful substances and toxins.</h6>
-                            <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
+                            <h3>Misión.</h3>
+                            <h6>En la Clínica Ginecoestética GINELASER, nuestra misión es empoderar a las mujeres a través de procedimientos y tratamientos estéticos ginecológicos de alta calidad que promuevan la confianza en sí mismas y el bienestar emocional. Estamos comprometidos a brindar a nuestros pacientes una experiencia de atención integral, segura y personalizada en un entorno de confidencialidad y respeto.</h6>
                             <!--<a href="services.html" class="theme-btn style-two mt-15">Our Services</a>-->
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="vission vission-mission bg-three text-white">
-                            <h3>Vision.</h3>
-                            <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
-                            <p>It has different attractions – tropical rain, fog, dew, wall jets and it is combined with sound, caribbian storm, aroma and various lighting effects, what makes you have an unforgettable filling.</p>
+                            <h3>Visión.</h3>
+                            <p>Nuestra visión en la Clínica Ginecoestética GINELASER es ser líderes en la ginecología estética, ofreciendo tratamientos innovadores y personalizados que mejoren la calidad de vida de las mujeres en todo el mundo.</p>
                             <!--<a href="team.html" class="theme-btn style-four mt-15">Our Experts</a>-->
                         </div>
                     </div>
