--- a/tratamientosreductivos.html
+++ b/tratamientosreductivos.html
@@ -114,7 +114,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">GINELASER</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Tratameintos reductivos</li>
+                            <li class="breadcrumb-item active" aria-current="page">Tratamientos reductivos</li>
                         </ol>
                     </nav>
                 </div>
