--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         <!--==================================================================== 
            Start Banner Section
        =====================================================================-->
-        <section class="banner-section">
+        <!--<section class="banner-section">
             <div class="container">
                 <div class="banner-inner">
                     <nav aria-label="breadcrumb">
@@ -122,7 +122,7 @@
             <div class="banner-angle">
                 <img src="assets/images/banner/banner-angle.png" alt="Angle">
             </div>
-        </section>
+        </section>-->
         <!--==================================================================== 
            End Banner Section
        =====================================================================-->
@@ -211,44 +211,37 @@
                 
                 <div class="team-carousel owl-carousel style-two">
                     <div class="team-item">
-                        <img src="assets/images/team/team1.png" alt="Team Member">
-                        <h5>Sophie Harrison</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/estrilla.png" alt="Team Member">
+                        <a href="laserestriascicatriz.html">Laser para estrías y cicatriz</a>
+                        
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team2.png" alt="Team Member">
-                        <h5>Beatrice Cummings</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/axila.png" alt="Team Member">
+                        <a href="manchasehiperpigmentacion.html">Manchas e hiperpigmentación</a>
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team3.png" alt="Team Member">
-                        <h5>Micheal Perkins</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/doctor_oficial.png" alt="Team Member">
+                        <a href="tratamientosreductivos.html">Tratamientos reductivos</a>
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team4.png" alt="Team Member">
-                        <h5>Fernando Garcia</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/verrugas.png" alt="Team Member">
+                        <a href="verrugas.html">Verrugas</a>
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team1.png" alt="Team Member">
-                        <h5>Sophie Harrison</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/diu.png" alt="Team Member">
+                        <a href="metodosdeplanificacion.html">Métodos de planificación</a>
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team2.png" alt="Team Member">
-                        <h5>Beatrice Cummings</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/uso laser.png" alt="Team Member">
+                        <a href="lasertractogenital.html">Uso de laser en tracto genital</a>
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team3.png" alt="Team Member">
-                        <h5>Micheal Perkins</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/laser vaginal.png" alt="Team Member">
+                        <a href="tratamientosginecologicoesteticos.html">Tratamientos ginecológico estéticos</a>
                     </div>
                     <div class="team-item">
-                        <img src="assets/images/team/team4.png" alt="Team Member">
-                        <h5>Fernando Garcia</h5>
-                        <p>Team Leader</p>
+                        <img src="assets/images/servicios_peque/labiosvaginales.png" alt="Team Member">
+                        <a href="ginecologicosesteticosquirurgicos.html">Procedimientos ginecologicos esteticos quirurgicos</a>
                     </div>
                 </div>
 
@@ -390,7 +383,7 @@
                                 <div class="widget about-widget mr-30 rmr-0">
                                     <h4 class="footer-title">Sobre Nosotros.</h4>
                                     <div class="about-widget-content">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
+                                        <p>Creemos en la importancia de la atención médica preventiva y en brindar soluciones efectivas para las necesidades de salud de las mujeres. Si deseas obtener más información o programar una consulta, no dudes en contactarnos. </p>
                                         <div class="about-widget-contact mt-25">
                                             <p>La fontana, Residencial los Almendros, #15 <br> San Miguel, El Salvador</p>
                                             <h4><a href="callto:+00568468349">+503 7199 3626</a></h4>
@@ -402,13 +395,16 @@
                                 <div class="widget services-widget">
                                     <h4 class="footer-title">Nuestros Servicios.</h4>
                                     <ul class="list-style-one">
-                                        <li><a href="#">Tensado Vaginal</a></li>
-                                        <li><a href="#">Blanquamiento</a></li>
-                                        <li><a href="#">Mejoria de cicatriz y estrias</a></li>
-                                        <li><a href="#">Relleno de punto G</a></li>
-                                        <li><a href="#">Depilación Axilas</a></li>
-                                        <li><a href="#">Depilación Barba</a></li>
-                                        <li><a href="#">Depilación Piernas</a></li>
+                                        <li><a href="depilacionlaser.html">Depilación Laser</a></li>
+                                                <li><a href="laserestriascicatriz.html">Laser para estrías y cicatriz</a></li>
+                                                <li><a href="manchasehiperpigmentacion.html">Manchas e Hiperpigmentación</a></li>
+                                                <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
+                                                <li><a href="verrugas.html">Verrugas</a></li>
+                                                <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
+                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
+                                                <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
+                                                <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
                                     </ul>
                                 </div>
                             </div>
