--- a/lasertractogenital.html
+++ b/lasertractogenital.html
@@ -106,13 +106,13 @@
         <!--==================================================================== 
            Start Banner Section
        =====================================================================-->
-        <section class="banner-section">
+        <!--<section class="banner-section">
             <div class="container">
                 <div class="banner-inner">
-                    <!--<div class="banner-content">
+                    <div class="banner-content">
                         <h2 class="page-title">Facial Surgery</h2>
                         <p>Saunas are used all over the world to improve <br> health, to enjoy and relax.</p>
-                    </div>-->
+                    </div>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="index.html">GINELASER</a></li>
@@ -124,7 +124,7 @@
             <div class="banner-angle">
                 <img src="assets/images/banner/banner-angle.png" alt="Angle">
             </div>
-        </section>
+        </section>-->
         <!--==================================================================== 
            End Banner Section
        =====================================================================-->
@@ -220,7 +220,7 @@
                                 <div class="widget about-widget mr-30 rmr-0">
                                     <h4 class="footer-title">Sobre Nosotros.</h4>
                                     <div class="about-widget-content">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
+                                        <p>Creemos en la importancia de la atención médica preventiva y en brindar soluciones efectivas para las necesidades de salud de las mujeres. Si deseas obtener más información o programar una consulta, no dudes en contactarnos. </p>
                                         <div class="about-widget-contact mt-25">
                                             <p>La fontana, Residencial los Almendros, #15 <br> San Miguel, El Salvador</p>
                                             <h4><a href="callto:+00568468349">+503 7199 3626</a></h4>
