--- a/verrugas.html
+++ b/verrugas.html
@@ -105,7 +105,7 @@
         <!--==================================================================== 
            Start Banner Section
        =====================================================================-->
-        <section class="banner-section">
+        <!--<section class="banner-section">
             <div class="container">
                 <div class="banner-inner">
                     <nav aria-label="breadcrumb">
@@ -119,7 +119,7 @@
             <div class="banner-angle">
                 <img src="assets/images/banner/banner-angle.png" alt="Angle">
             </div>
-        </section>
+        </section>-->
         <!--==================================================================== 
            End Banner Section
        =====================================================================-->
@@ -142,7 +142,7 @@
                             <h2>VERRUGAS</h2>
                             <p>Las verrugas son lesiones epidérmicas benignas y frecuentes causadas por una infección por el virus del papiloma humano. Pueden aparecer en cualquier parte del cuerpo con diferentes morfologías. </p>
                             <p>El diagnóstico se realiza mediante el examen físico. Las verrugas suelen ser autolimitadas, aunque pueden tratarse con métodos distintos (p. ej., escisión, cauterización, crioterapia, laser, dermapen) y agentes tópicos o inyectables.</p>
-                            <a href="index.html" class="theme-btn btn-reverse style-two">Back To Home</a>
+                            <a href="https://api.whatsapp.com/send?phone=50371993626&text=Bienvenidos%20a%20GINELASER!" class="theme-btn style-two">Reserva tu cita</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                                 <div class="widget about-widget mr-30 rmr-0">
                                     <h4 class="footer-title">Sobre Nosotros.</h4>
                                     <div class="about-widget-content">
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa provident ratione iure eveniet quod vel itaque quos blanditiis accusamus aut! Accusamus obcaecati corrupti tenetur tempore cumque! Cum dolores adipisci ad.</p>
+                                        <p>Creemos en la importancia de la atención médica preventiva y en brindar soluciones efectivas para las necesidades de salud de las mujeres. Si deseas obtener más información o programar una consulta, no dudes en contactarnos. </p>
                                         <div class="about-widget-contact mt-25">
                                             <p>La fontana, Residencial los Almendros, #15 <br> San Miguel, El Salvador</p>
                                             <h4><a href="callto:+00568468349">+503 7199 3626</a></h4>
