intregracion de imagenes y cambios

--- a/manchasehiperpigmentacion.html
+++ b/manchasehiperpigmentacion.html
@@ -137,7 +137,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5">
                         <div class="sp-left-image rmb-50">
-                            <img src="assets/images/services/sp-left.png" alt="Service Page">
+                            <img src="assets/images/img_x_servicios/manchasehiper/1.png" alt="Service Page">
                         </div>
                     </div>
                     <div class="col-lg-7">
@@ -193,17 +193,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-5">
-                        <div class="sp-video bg-two ml-100">
-                            <!--<div class="document-links mb-45">
-                                <a href="#"><i class="far fa-file-pdf"></i> Documentation</a>
-                                <a href="#"><i class="far fa-file-word"></i> Documentation</a>
-                            </div>-->
-                            <div class="video-img">
-                                <img src="assets/images/services/sp-video.png" alt="Video Image">
-                                <a href="https://www.youtube.com/watch?v=9Y7ma241N8k" class="mfp-iframe video-play"><i class="flaticon-play-button"></i></a>
-                            </div>
-                        </div>
+                    <div class="sp-left-image rmb-50">
+                        <img src="assets/images/img_x_servicios/manchasehiper/2.png" alt="Service Page">
                     </div>
                 </div>
             </div>
