--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="container">
                 <div class="section-title text-center mb-95">
                     <h2>Nuestros Servicios</h2>
-                    <p>Somos los pioneros a nivel Orienteal en el cuidado de la bella <br> utilizando tecnologia de ultimo momento para cada uno de nuestros tratamientos.</p>
+                    <p>Somos los pioneros a nivel Oriental en el cuidado de la belleza<br> utilizando tecnología de ultimo momento para cada uno de nuestros tratamientos.</p>
                 </div>
                 <!---------------------->
                 <!------FILA UNO---->
