--- a/ginecologicosesteticosquirurgicos.html
+++ b/ginecologicosesteticosquirurgicos.html
@@ -134,13 +134,36 @@
         <section class="service-section-one my-150 rmt-125 rmb-95">
             <div class="container">
                 <div class="row align-items-center">
-                    
+
+
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/images/img_x_servicios/ginecoestetico/1.png" alt="First slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/img_x_servicios/ginecoestetico/2.png" alt="Second slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/img_x_servicios/ginecoestetico/1.png" alt="Third slide">
+                          </div>
+                          <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/images/img_x_servicios/ginecoestetico/2.png" alt="cuarta slide">
+                          </div>
+                        </div>
+                      </div>
+
+
+
+
+
+                    <!--
                     <div class="col-lg-5">
                         <div class="sp-left-image rmb-50">
                             <img src="assets/images/img_x_servicios/ginecoestetico/1.png" alt="Service Page">
                         </div>
                     </div>
-
+                    -->
 
 
                     <div class="col-lg-7">
