--- a/depilacionlaser.html
+++ b/depilacionlaser.html
@@ -154,7 +154,7 @@
                                     <ul>•	Dolor muy suave.</ul>
                                     <ul>•	Ligera hinchazón.</ul>
                                     <ul>•	Enrojecimiento de la zona.</ul>
-                                    <ul>•	Pequeñas hemorragias y moratones</ul>
+                                    <ul>•	Pequeñas hemorragias y moretones</ul>
                                    </li>
                                 </div>
                                 <div class="col-sm-4">
