--- a/metodosdeplanificacion.html
+++ b/metodosdeplanificacion.html
@@ -169,7 +169,7 @@
                         <div class="sp-video-conten rmb-50">
                             <div class="col-sm-12">
                                 <h4>EL DISPOSITIVO INTRAUTERINO (DIU)</h4>
-                                <p>El dispositivo intrauterino: es un dispositivo de plástico que se coloca en el útero y que dificulta el paso de los espermatozoides para fecundar los óvulos. Se coloca a través de la vagina y tiene una duración de entre tres y cinco años. Su eficacia es del 99%.</p>
+                                <p>El dispositivo intrauterino: es un dispositivo de plástico que se coloca en el útero y que dificulta el paso de los espermatozoides para fecundar los óvulos. Se coloca a través de la vagina y tiene una duración de entre tres y cinco años, el hormonal y T de cobre para una duración de diez años. Su eficacia es del 99%.</p>
                             </div>
                             <div class="col-sm-12">
                                 <h4>IMPLANTE SUBDERMICO</h4>
