--- a/acidohialuronico.html
+++ b/acidohialuronico.html
@@ -151,7 +151,7 @@
                                         .</p>
                                 </div>
                                 <div class="col-sm-12">
-                                    <p>Su propiedad regeneradora es muy importante, por ello, también es ideal para tratar enfermedades de carácter degenerativo como la artrosis, actuando como reductor del dolor y regenerador del cartílago.
+                                    <p>Su propiedad regeneradora es muy importante, en el ambito de ginecología regenerativa podemos tratar la sequedad vaginal, más llamativa en la menopausia y perimenopausia por la atrofia genital debido al deficid de estrogeno pero también presente en posparto y en pacientes que usan anticonceptivos hormonales.
                                         Además, también está indicado para aumentar labios genitales, relleno de punto G, infiltración de mucosa vaginal
                                         </p>
                             </div>
