--- a/contact.html
+++ b/contact.html
@@ -227,20 +227,12 @@
         <!--==================================================================== 
            Start Contact Map Section
        =====================================================================-->
-       <!-- <div class="contact-map" id="map">
-        </div>
-        -->
-        <div id="map-container-google-2" class="z-depth-1-half map-container" style="height: 500px">
-            <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-              style="border:0" allowfullscreen></iframe>
-          </div>
-        
-        </div>
+       <div class="contact-map" id="map">
+       </div>        
         <!--==================================================================== 
            End Contact Map Section
        =====================================================================-->
 
-       
         <!--==================================================================== 
                                 Start Footer Section
         =====================================================================-->
@@ -272,7 +264,7 @@
                                                 <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
                                                 <li><a href="verrugas.html">Verrugas</a></li>
                                                 <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
-                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="acidohialuronico.html">Acido Hialuronico </a></li>
                                                 <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
                                                 <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
                                                 <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
