--- a/manchasehiperpigmentacion.html
+++ b/manchasehiperpigmentacion.html
@@ -233,7 +233,7 @@
                                                 <li><a href="tratamientosreductivos.html">Tratamientos Reductivos</a></li>
                                                 <li><a href="verrugas.html">Verrugas</a></li>
                                                 <li><a href="metodosdeplanificacion.html">Metodos de Planificación</a></li>
-                                                <li><a href="acidohialuronico.html">Aido Hialuronico </a></li>
+                                                <li><a href="acidohialuronico.html">Acido Hialuronico </a></li>
                                                 <li><a href="lasertractogenital.html">Laser en tracto genital</a></li>
                                                 <li><a href="tratamientosginecologicoesteticos.html">Ginecología estética</a></li>
                                                 <li><a href="ginecologicosesteticosquirurgicos.html">Ginecologicos Esteticos Quirurgicos</a></li>
