--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    
 
 </head>
 
@@ -227,8 +228,15 @@
         <!--==================================================================== 
            Start Contact Map Section
        =====================================================================-->
-       <div class="contact-map" id="map">
-       </div>        
+      <!--Google map-->
+      <div class="contact-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3880.0014498775977!2d-88.18814202410834!3d13.474008086889603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f7b2beac65ce0e1%3A0xc3296f8a39efbe6e!2sGINELASER!5e0!3m2!1sen!2ssv!4v1699520973591!5m2!1sen!2ssv" width="100%" height="820px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </div>   
+  
+  <!--Google Maps-->
+      
+       <!-- <div class="contact-map" id="map">
+       </div>-->        
         <!--==================================================================== 
            End Contact Map Section
        =====================================================================-->
@@ -327,6 +335,7 @@
 
     <!-- Custom script -->
     <script src="assets/js/script.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
 </body>
 
