--- a/tratamientosginecologicoesteticos.html
+++ b/tratamientosginecologicoesteticos.html
@@ -136,7 +136,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5">
                         <div class="sp-left-image rmb-50">
-                            <img src="assets/images/img_x_servicios/tratamientosginecologicos/1.png" alt="Service Page">
+                            <video controls autoplay src="assets/video/SPOT_1.mp4" type="video/mp4" width="500" height="500"></video>
                         </div>
                     </div>
                     <div class="col-lg-7">
@@ -200,7 +200,7 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="sp-left-image rmb-50">
-                            <img src="assets/images/img_x_servicios/tratamientosginecologicos/2.png" alt="Service Page">
+                            <img src="assets/images/img_x_servicios/tratamientosginecologicos/1.png" alt="Service Page">
                         </div>
                     </div>
                 </div>
